--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 :root {
+    --color0: rgb(237, 200, 148);
     --color1: rgb(238, 224, 206);
     --color2: rgba(239, 142, 32, 0.848);
     --color3: rgb(221, 124, 13);
@@ -31,4 +32,45 @@
 .main {
     flex-grow: 1;
     background-color: var(--color1);
+}
+
+.signup-cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.start-card {
+    max-width: 150px;
+    padding: 10px;
+
+}
+
+#form {
+    gap: 10px;
+    padding: 10px;
+
+    display: flex;
+    flex-direction: column;
+    background-color: var(--color0);
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#form button {
+    max-width: 100px;
+    min-width: 50px;
+    flex-grow: 1;
+    border-radius: 75px;
+}
+
+
+.start-card input {
+    border-radius: 75px;
+    max-width: 100px;
+    border: 0;
 }
