--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
 :root {
+    /* color-schemes */
     --color0: rgb(237, 200, 148);
     --color1: rgb(238, 224, 206);
     --color2: rgba(239, 142, 32, 0.848);
     --color3: rgb(221, 124, 13);
     --color4: rgba(229, 130, 16, 0.798);
     --color5: rgb(186, 104, 10);
+    /* SVGs */
+    --svgX: url("./public/restart.svg");
 }
+
+
 
 .body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -34,7 +39,8 @@
     background-color: var(--color1);
 }
 
-.signup-cards {
+/* TEMP CLASS */
+.centerflex {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -74,3 +80,75 @@
     max-width: 100px;
     border: 0;
 }
+
+#form>div.xo>input[type=radio]:nth-child(1) {
+    background-image:
+        url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='10' height='10'><linearGradient id='gradient'><stop offset='10%' stop-color='%23F00'/><stop offset='90%' stop-color='%23fcc'/> </linearGradient><rect fill='url(%23gradient)' x='0' y='0' width='100%' height='100%'/></svg>")
+}
+
+/* Button used to open the contact form - fixed at the bottom of the page */
+/* .open-button {
+  background-color: #555;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  position: fixed;
+  bottom: 23px;
+  right: 28px;
+  width: 280px;
+} */
+
+/* The popup form - hidden by default */
+/* .form-popup {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+} */
+
+/* Add styles to the form container */
+/* .form-container {
+  max-width: 300px;
+  padding: 10px;
+  background-color: white;
+} */
+
+/* Full-width input fields */
+/* .form-container input[type=text], .form-container input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+} */
+
+/* When the inputs get focus, do something */
+/* .form-container input[type=text]:focus, .form-container input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+} */
+
+/* Set a style for the submit/login button */
+/* .form-container .btn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+} */
+
+/* Add a red background color to the cancel button */
+/* .form-container .cancel {
+  background-color: red;
+} */
+
+/* Add some hover effects to buttons */
+/* .form-container .btn:hover, .open-button:hover {
+  opacity: 1; */
