--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     min-height: 100vh;
+    min-width: 350px;
     flex-direction: column;
     justify-content: space-between;
 }
@@ -85,6 +86,7 @@
 body>main>div:nth-child(1)>button {
     background-image: var(--svgG);
     background-repeat: no-repeat;
+
 }
 
 /* Button used to open the contact form - fixed at the bottom of the page */
