--- a/style.css
+++ b/style.css
@@ -91,8 +91,14 @@ body>main>div:nth-child(1)>button {
 
 }
 
-
-
+.board {
+  border: 1px solid black;
+}
+.row {
+  display: flex;
+  gap: 10px
+  /* flex-direction: column; */
+}
 /* The popup form - hidden by default */
 /* .form-popup {
   display: none;
