--- a/style.css
+++ b/style.css
@@ -50,7 +50,6 @@
 
 
 .start-card {
-    max-width: 150px;
     padding: 10px;
 
 }
@@ -58,15 +57,26 @@
 #form {
     gap: 10px;
     padding: 10px;
-
+    border-radius: 25px;
+    box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.5);
     display: flex;
-    flex-direction: column;
     background-color: var(--color0);
     justify-content: center;
-    display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+}
+
+.playerCard {
+  gap: 10px;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 25px;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.5);
+  background-color: var(--color0);
+
 }
 
 .btn {
