--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 25px;
-  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.5);
+  box-shadow: 1px 10px 10px rgba(34, 35, 58, 0.6);
   background-color: var(--color0);
 
 }
@@ -85,7 +85,20 @@
   flex-grow: 1;
   border-radius: 75px;
 }
+.game-board {
+  display: flex;
+  flex-direction: column;
 
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+.playerCards {
+  margin-top: 30px;
+  display: grid;
+  grid-gap: 50px;
+  grid-template-columns: repeat(2, 1fr)
+}
 
 .start-card input {
     border-radius: 75px;
