--- a/style.css
+++ b/style.css
@@ -60,9 +60,17 @@
 
 }
 
+#form:hover {
+  transform: scale(1.05);
+  background-color: var(--color2);
+}
+
+
 #form {
+    margin-top: 150px;
     gap: 10px;
-    padding: 10px;
+    font-size: large ;
+    padding: 40px;
     border-radius: 25px;
     box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.5);
     display: flex;
@@ -119,16 +127,22 @@ body>main>div:nth-child(1)>button {
 }
 
 .board {
+
 display: grid;
-margin-top: 50px;
+margin-top: 20px;
+margin-bottom: 20px;
 grid-template-columns: repeat(3, 150px);
 grid-template-rows: repeat(3, 150px);
 grid-gap: 2px;
 background-color: black;
-border: 1px black solid;
+border: 9px black solid;
 }
 
 .cell {
+  
+display: flex;
+justify-content: center;
+align-items: center;
 background-color: var(--color3)
 }
 /* The popup form - hidden by default */
